--- a/styles/style.css
+++ b/styles/style.css
@@ -1255,6 +1255,7 @@ ol.commentlist > :not([hidden]) ~ :not([hidden]) {
 }
 
 li article {
+  position: relative;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
 }
@@ -1280,14 +1281,14 @@ li article {
 }
 
 .edit-link a {
-  margin-left: 0.5rem;
-  border-radius: 9999px;
+  position: absolute;
+  top: 0.25rem;
+  right: 0.25rem;
+  border-radius: 0.375rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   font-size: var(--wp--preset--font-size--small);
   text-transform: uppercase;
   font-style: normal;
@@ -1328,6 +1329,7 @@ li.depth-1 {
 
 .comment-meta {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -1367,6 +1369,10 @@ ol.children > li {
 
 .wp-block-buttonol.children > li:hover > .wp-block-button__link {
   background-color: transparent;
+}
+
+textarea, input {
+  width: 100%;
 }
 
 ol.comment-list li .comment-body, .comment-details {
@@ -1452,11 +1458,6 @@ form.comment-form .comment-form-comment textarea {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
   color: var(--wp--preset--color--primary-default);
-}
-
-.logged-in-as {
-  display: flex;
-  align-items: center;
 }
 
 .logged-in-as a {
@@ -2467,8 +2468,8 @@ input[type='text'], input[type='email'], textarea {
   padding: 5rem;
 }
 
-.p-10 {
-  padding: 2.5rem;
+.p-4 {
+  padding: 1rem;
 }
 
 .py-20 {
@@ -3192,6 +3193,10 @@ figcaption {
 
   .lg\:p-6 {
     padding: 1.5rem;
+  }
+
+  .lg\:p-10 {
+    padding: 2.5rem;
   }
 
   .lg\:py-32 {
